lib/manifests/mcp/mcp-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mcp-gateway-controller
  namespace: mcp-gateway-system
  labels:
    app: mcp-gateway-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mcp-gateway-controller
  template:
    metadata:
      labels:
        app: mcp-gateway-controller
    spec:
      serviceAccountName: mcp-controller
      containers:
      - name: controller
        image: registry.redhat.io/rhcl-tech-preview/mcp-gateway-rhel9-operator@sha256:d523288fad298f12a8dfc559ff279c06811b32db418c0ffd7a291bfd115fef82
        imagePullPolicy: IfNotPresent
        ports:
        - name: metrics
          containerPort: 8080
          protocol: TCP
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 256Mi
